# ChangeLog for dev-tex/metapost
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-tex/metapost/ChangeLog,v 1.4 2013/01/14 10:48:16 aballier Exp $

*metapost-1.780 (14 Jan 2013)

  14 Jan 2013; Alexis Ballier <aballier@gentoo.org> +metapost-1.780.ebuild:
  version bump

  26 Jul 2012; Alexis Ballier <aballier@gentoo.org> metapost-1.504.ebuild,
  +files/invocname.patch:
  Import upstream fix to build with kpathsea from TeX Live 2011 (without our
  api compatibility patch).

*metapost-1.504 (04 Aug 2011)

  04 Aug 2011; Alexis Ballier <aballier@gentoo.org> +metapost-1.504.ebuild:
  bump to beta version as included in texlive 2011

*metapost-1.212 (09 Jan 2011)

  09 Jan 2011; Alexis Ballier <aballier@gentoo.org> +metapost-1.212.ebuild,
  +metadata.xml:
  initial import, standalone version of metapost, ebuild by me
