@@ -4,16 +4,18 @@ Hash: SHA256
 AUX invocname.patch 603 SHA256 06e2ad08a9259bf54d6df7fd7ab95aa586f16afc9dfceb9c06154ec53713c42a SHA512 4187dc561e7ddc0616ebba240234910fc4ca20afefdbfb84fbbf8bf81c1fdec7a98e0f8da18aa3cd8e9f77407820b5ba18525f03ed119bce16f34f46e1a125c0 WHIRLPOOL 03c7e5e7dae37e87a24b7bc67628dad055c94e2262344185c47ab173bb711bbb96cc8f1ab6a3960db08f22a3ca71b4ac22943474e1c2ce56cdedba0edc8be6c8
 DIST metapost-1.212-src.tar.bz2 4862803 SHA256 bed4fa92cf86c668d4180f6c644f2a00a5cee17be3f0c00dcfc32c6ff842903a SHA512 ec66d756ff4505ce49d74b0a3fbdc715d4cf95eb3e3a3acd2f704310ae3d1bf3cb87bc75aaa2b1f74d32182ac6815ce658ece42a2f8c880d2d065f52c22fbe42 WHIRLPOOL 15c14f54511cbdebda5dfba8a90ff407d4779f2cd0bf341dfe3c80dac06c66d9d3b8963c54a8f531bce25a536455a03ca27ca6a3bb3b1ee502c5ccf4923b7987
 DIST metapost-1.780-src.tar.bz2 7723409 SHA256 aca382bb1c6b4f52d389c0170cad57c4961fa8de634de34ea47b0a37cfabde58 SHA512 3002da0706fcd33a2d183f42b770b7c2d72759a8ba0e49ae24e4a5cee5dd9cd0842e7e8d854e22962beaff4dfd1b943a63f41ee07a7743bb7d50a0cdfb4dd4ff WHIRLPOOL 3095ac3cda9bd65487074882c6cc9d8bf2210d04b69ed741290054f1622a5c29ce9af986cc5b819b910db2757eb14565e1ce9a1968a2f29ae72bca50ce2c90d1
+DIST metapost-1.803-src.tar.bz2 8140579 SHA256 436c57c8f8753b6829a1df575cbc3af553b6df42c51abd5c420117ad4c6cdeb3 SHA512 7f59e93f73c9f9c6fe547028dd22527c948ea171c235758e1acf9477c85d2fb2cc145b3bd707646a4b5317e57ce5d49160ff347cdecca599b6e0da8a8f679d99 WHIRLPOOL cc999052d994f8d1c21c1a843696097cca10ae4fd794a761a916618021dc9e1dd300305c220b30da8de1f2a8b7c35a91dfc22da8666d366e01948d0e34edfdb3
 DIST metapost-beta-1.504-src.tar.bz2 4784579 SHA256 94d37e092c953141cf95c62f6fb441fdbdb786e6c0df5f6b5d6af41658e99562 SHA512 40bf7304df0de3d1df069ab48f5d08b9ddaa7bcba9332c6076dc9fed3a6371351c9bdc6504c297835d454d6c97db15b2f2620a629801089c1acffb9ea9c76771 WHIRLPOOL c62271ebb343d6dd43527f6bda7cbeb5ea9ead9580fc7ea65e343cd69317b2bb8b196b3016eb65a6435a463551ff9e2a45c9eb7d460e4b72973b86c5af02abd4
 EBUILD metapost-1.212.ebuild 2607 SHA256 5deb92372b76a6b4d6c46b45038877d5261b52d683b1c275a76b3220515dd048 SHA512 c677de50ff5ea945c53359ee686c7f3bcee2b7a05f438c7f3defbef2c66c5012abd40e17eee36522f4f94540697ce14a391f03bc469b79d575168c06d41740a1 WHIRLPOOL 7082ed1707b05ce910a9c1ae8efe10797ec50ca4aa82c13a2833873a15308d413bffa6ee6eb3f4ba98544c67cc91eb32549b4f3634c226d18898de1657d41252
 EBUILD metapost-1.504.ebuild 2650 SHA256 6a95c685fcc753871cd317463cf1092b1bdb2807d74da4cf368771d4514a248a SHA512 c998cac42ede35fda36706789c924ec9c0fbea00ddfdc4e706a34e353d050ad74a4da1ea37788d96acbf95d9569175a9f0b8bbbd4506feb5c4433dde8a502763 WHIRLPOOL d6b60a98255e0224d65ecdd735013437376a7732034320aed92ec44e5665cf6e02b7d41b81b0e1ceca55f4687baf73a81217010511b271d614acc945528d8bcd
 EBUILD metapost-1.780.ebuild 1644 SHA256 d5a58df84971c53dd3ee2095f8ff0eff31b73e9231d12498657f8b53112be741 SHA512 87bffb437d6595b48ed3aaed921a5295ba3008a8ca469c5cd1b6aaf29d3c8aca41ee64b046bb49066e311e4b7d4c8d7faa58ce1a4caab069541683447ef416de WHIRLPOOL f48312eb564223ffc159097ce1ba15d0a6847977039978ce8a5e2e9fb9e455912a77343b2cde8bcb7a194787c33f90bd8586032a2b1703beb26d642566571635
-MISC ChangeLog 884 SHA256 a9a21c38d5493aef8e939fd834d11767b190838d1c33a6249a6af6398af44fa6 SHA512 29e87db1fca90fc9a20dfd4b4c33c2b6b1b891c27f9cca1ee67c906e803248e3613d78d37ffce02f26aeff4323666c19280d9cd9f90f4fbd744b585c94102581 WHIRLPOOL 4bb1af9e90c96d4dc519640d26b7014e7e98e244f587df466688961c39d9a377f10cbb4caf570c45ebc520ccc90151653d86caed836c1028724d81f35a4fbbbc
+EBUILD metapost-1.803.ebuild 1662 SHA256 5226e00847a5f9f4616922cab386e36ab5589b0f3ddf179dafe0dce8f8e3c448 SHA512 3faf95d6d1e5a70190b797794bf3b253c0ba57da661944732ade3f12c46ac865eedc31491f7edd123e4b3860f8b406b7b7a87fb2bde65885b0b2b91a46a3ff13 WHIRLPOOL 37f8f5778aff58db7e14d6159fa8600e49615c28318dd61a21f285e1697123665f4fc68facd1dc390a04cb4d2c583fa6cf90fa90ec1b6761c87029ff83ce7a6a
+MISC ChangeLog 1007 SHA256 fa7fdc61649d48c58171acb18d858a60df461622bda2a85c5801cfab2a989219 SHA512 5e934e86801376575e0be120bed73e06fdb1c0addb2f66a7fdae9c6e31789fc050bba03dd652b7101408a1f5db3582ffe1f4519d495a8529b62b5d5a629591d8 WHIRLPOOL d8a90d96df0dce3bd39aba8534fb8e7e35c98b053346d750efe31788428094fd3ba3a1a279ab62a6cdb2f01346ed185c2754d4796fcc3dc8872721059b4fea27
 MISC metadata.xml 156 SHA256 b4971b8472ab3fe4fbfe41b331a79193ca19e86c08d055ad1c20eaf9e04b79b6 SHA512 cecee760dd314c182191a282255f2415e479a8cc6cab9cb664e5b82d52b700a3444aa0d33b30a721a756e432819decc8c92588c769ea6fd33dabe9adc16d75c0 WHIRLPOOL 88a15092b616df72dd0ae91d89c80d852ad49ab9fee8a9688f3a1be59c365cc3dc77e90be68b5c4ec9cc1dc9885e06e723abc96830df4d0628df8c97f8b2a332
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.19 (GNU/Linux)
+Version: GnuPG v2.0.20 (GNU/Linux)
 
-iEYEAREIAAYFAlDz4nEACgkQvFcC4BYPU0roTwCgnSBX2SJLAZfw5WCZrh6gEo28
-zF4An2vE7LglkSAi1UlDQFAfiLiIpVeE
-=2NbJ
+iEYEAREIAAYFAlHKCakACgkQvFcC4BYPU0qsZACfc5lTOaw+PojHlsormGNFQpeT
+u38AnjNwIXo1Utj3rcOVs+zy855V0kZf
+=vni6
 -----END PGP SIGNATURE-----
